deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${ENVIRONMENT}-${KUBE_SERVICE}
  namespace: ${ENVIRONMENT}-${KUBE_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${ENVIRONMENT}-${KUBE_SERVICE}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ${ENVIRONMENT}-${KUBE_SERVICE}
    spec:
      containers:
        - name: ${ENVIRONMENT}-${KUBE_SERVICE}
          image: "rodrigomotadevops/${ENVIRONMENT}-${KUBE_SERVICE}:latest"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: ${HEALTHCHECK_PATH}
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          resources:
            limits:
              cpu: 300m
              memory: 400Mi
            requests:
              cpu: 150m
              memory: 200Mi
      terminationGracePeriodSeconds: 300
