ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}
  namespace: ${ENV}-${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    cert-manager.io/issuer: letsencrypt-nginx

spec:
  tls:
  - hosts:
    -  ${ENVIRONMENT}${HOST}
    secretName: meu-tls-${ENVIRONMENT}${HOST}
  rules:
  - host: ${ENVIRONMENT}${HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${ENV}-${NAME}
            port:
              number: 80
